@@ -1,3 +1,8 @@
+2019-10-14  Jakub Jelinek  <jakub@redhat.com>
+
+	PR c++/92084
+	* g++.dg/gomp/pr92084.C: New test.
+
 2019-10-14  Richard Sandiford  <richard.sandiford@arm.com>
 
 	* gcc.dg/diag-aka-5.h: New test.
